[project]
name = "reinforcement-study"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ale-py>=0.10.2",
    "gymnasium[mujoco,other]>=1.0.0",
    "numpy>=2.2.4",
    "opencv-python>=4.11.0.86",
    "stable-baselines3>=2.5.0",
    "torch>=2.6.0",
    "tqdm>=4.67.1",
    "wandb>=0.19.8",
]

[tool.uv.workspace]
members = ["code_implementation"]
